@@ -16,7 +16,7 @@ import reactor.util.annotation.Nullable;
 public class McpTransportSessionClosedException extends RuntimeException {
 
 	public McpTransportSessionClosedException(@Nullable String sessionId) {
-		super(sessionId != null ? "MCP session with ID %s has been closed".formatted(sessionId)
+		super(sessionId != null ? String.format("MCP session with ID %s has been closed", sessionId)
 				: "MCP session has been closed");
 	}
 
